@@ -2251,6 +2251,7 @@ EXCEL_METHOD(Sheet, readRow)
 		if (!php_excel_read_cell(row, lc, value, sheet, book, &format, read_formula)) {
 			zval_ptr_dtor(&value);
 			zval_dtor(return_value);
+			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Failed to read cell in row %d, column %d with error '%s'", row, lc, xlBookErrorMessage(book));
 			RETURN_FALSE;
 		} else {
 			add_next_index_zval(return_value, value);
@@ -2311,6 +2312,7 @@ EXCEL_METHOD(Sheet, readCol)
 		if (!php_excel_read_cell(lc, col, value, sheet, book, &format, read_formula)) {
 			zval_ptr_dtor(&value);
 			zval_dtor(return_value);
+			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Failed to read cell in row %d, column %d with error '%s'", lc, col, xlBookErrorMessage(book));
 			RETURN_FALSE;
 		} else {
 			add_next_index_zval(return_value, value);
@@ -2345,6 +2347,7 @@ EXCEL_METHOD(Sheet, read)
 	}
 
 	if (!php_excel_read_cell(row, col, return_value, sheet, book, &format, read_formula)) {
+		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Failed to read cell in row %d, column %d with error '%s'", row, col, xlBookErrorMessage(book));
 		RETURN_FALSE;
 	}
 
@@ -2447,7 +2450,12 @@ EXCEL_METHOD(Sheet, write)
 		FORMAT_FROM_OBJECT(format, oformat);
 	}
 
-	RETURN_BOOL(php_excel_write_cell(sheet, book, row, col, data, oformat ? format : 0, dtype TSRMLS_CC));
+	if (!php_excel_write_cell(sheet, book, row, col, data, oformat ? format : 0, dtype TSRMLS_CC)) {
+		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Failed to write cell in row %d, column %d with error '%s'", row, col, xlBookErrorMessage(book));
+		RETURN_FALSE;
+	}
+
+	RETURN_TRUE;
 }
 /* }}} */
 
@@ -2492,6 +2500,7 @@ EXCEL_METHOD(Sheet, writeRow)
 		zend_hash_move_forward_ex(Z_ARRVAL_P(data), &pos)) {
 
 		if (!php_excel_write_cell(sheet, book, row, i++, *element, oformat ? format : 0, -1 TSRMLS_CC)) {
+			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Failed to write cell in row %d, column %d with error '%s'", row, i-1, xlBookErrorMessage(book));
 			RETURN_FALSE;
 		}
 	}
@@ -2542,6 +2551,7 @@ EXCEL_METHOD(Sheet, writeCol)
 		zend_hash_move_forward_ex(Z_ARRVAL_P(data), &pos)) {
 
 		if (!php_excel_write_cell(sheet, book, i++, col, *element, oformat ? format : 0, dtype TSRMLS_CC)) {
+			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Failed to write cell in row %d, column %d with error '%s'", i-1, col, xlBookErrorMessage(book));
 			RETURN_FALSE;
 		}
 	}
